desarrollo de la barra de navegacion y seccion principal del index (html y css), para movil

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,21 +8,23 @@
 </head>
 <body>
     <header>
-        <div class="nav_container">
-            <div class="logo_container">
-                <img class="imagen_logo" src="/ITBA/Imagenes/logo.svg" alt="Logo Hermanos Jota">
-            </div>
-            <nav>
+        <nav class="navegacion_container">
+            <img src="Imagenes/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
+            <ul class="navegacion_links">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="#">Contacto</a></li>
-            </nav>
-        </div>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <section class="hero_container">
-            <h1>Muebleria Hermanos Jota</h1>
+            <img src="/ITBA/Imagenes/Prueba.jpg" alt="imagen Princial" class="img-hero">
+            <div class="texto-img">
+                <h1 class="titulo_principal">Muebleria Hermanos Jota</h1>
+                <p class="frase_clave">Cada pieza cuenta la historia de manos expertas y materiales nobles</p>
+            </div>
         </section>
 
 
