seccion de tarjetas para productos destacados en desarrollo. archivo .js para la informacion de los productos

--- a/index.html
+++ b/index.html
@@ -20,15 +20,26 @@
 
     <main>
         <section class="hero_container">
-            <img src="/ITBA/Imagenes/Prueba.jpg" alt="imagen Princial" class="img-hero">
+            <img src="/ITBA/Imagenes/fondo.jpg" alt="imagen Princial" class="img-hero">
             <div class="texto-img">
                 <h1 class="titulo_principal">Muebleria Hermanos Jota</h1>
                 <p class="frase_clave">Cada pieza cuenta la historia de manos expertas y materiales nobles</p>
             </div>
         </section>
 
+        <section class="productos_container">
+            <h2>Productos Destacados</h2>
+            <p>Cada una de nuestras piezas refleja el equilibrio entre herencia e innovación. Diseñadas con maderas nobles, procesos sustentables y un cuidado artesanal único, estos muebles no solo acompañan tu hogar: lo transforman en un espacio con historia, calidez y carácter perdurable.</p>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        
+        <footer class="footer_container">
 
+        </footer>
 
+        <script src="CardsData.js"></script>
     </main>
     
 </body>
