Refactor: se extrajo los estilos del navegador en un archivo que se puede importar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="Imagenes/logo.svg" type="image/x-icon">
     <title>Mueblerias Hermanos Jota</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
             <img src="Imagenes/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
             <ul class="navegacion_links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
+                <li><a href="/assets/html/productos.html">Productos</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
