--- a/assets/html/productos.html
+++ b/assets/html/productos.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Productos</title>
+    <link rel="shortcut icon" href="../../Imagenes/logo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/navegador.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navegacion_container">
+            <img src="../../Imagenes/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
+            <ul class="navegacion_links">
+                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="/assets/html/productos.html">Productos</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+        <main>
+
+        </main>
+    </header>
 </body>
 </html>
