Feat: Se extrajo el estilo del footer y se creo en la lista de productos y producto. Se modificaron las referencias de las imagenes para que no se rompan las mismas

--- a/assets/html/productos.html
+++ b/assets/html/productos.html
@@ -6,16 +6,18 @@
     <title>Lista de Productos</title>
     <link rel="shortcut icon" href="../../Imagenes/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/navegador.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/productos.css">
 </head>
 <body>
-    <header class="contenedor">
+    <header>
         <nav class="navegacion_container">
             <img src="../../Imagenes/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
             <ul class="navegacion_links">
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/assets/html/productos.html">Productos</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="#">Carrito</a></li>
             </ul>
         </nav>
     </header>
@@ -29,6 +31,20 @@
             </div>
         </div>
     </main>
+    <footer class="footer_container">
+            
+            <div class="instagram_container">
+                <img src="../../Imagenes/instagram.png" alt="Logo de instagram" class="logo_instagram">
+                <p class="instagram"><a href="https://alt-5a31a0302d72d.blackboard.com/bbcswebdav/pid-982156-dt-content-rid-14612411_1/courses/FSD.00-43441/Instagram%20copy/index.html?one_hash=0B16917B0E1F538A38F6A96E8C3791F5&f_hash=5E7EFC7CF71B681E021F4D6E4DADA90E" target="_blank">hermanosjota_ba</a></p>
+            </div>
+
+            <div class="numero_container">
+                <img src="../../Imagenes/social.png" alt="Logo de telefono" class="logo_numero">
+                <p class="numero"><a href="+54 11 4567-8900">+54 11 4567-8900</a></p>
+            </div>
+
+            <strong class="copy_text">© 2025 Hermanos Jota.</strong>
+        </footer>
     <script src="../js/productos.js"></script>
 </body>
 </html>
