--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <section class="hero_container">
-            <img src="/repositorio/ITBA/Imagenes/fondo.jpg" alt="imagen Princial" class="img-hero">
+            <img src="Imagenes/fondo.jpg" alt="imagen Princial" class="img-hero">
             <div class="texto-img">
                 <h1 class="titulo_principal">Muebleria Hermanos Jota</h1>
                 <p class="frase_clave">Cada pieza cuenta la historia de manos expertas y materiales nobles</p>
@@ -58,12 +58,12 @@
         <footer class="footer_container">
             
             <div class="instagram_container">
-                <img src="/repositorio/ITBA/Imagenes/instagram.png" alt="Logo de instagram" class="logo_instagram">
+                <img src="Imagenes/instagram.png" alt="Logo de instagram" class="logo_instagram">
                 <p class="instagram"><a href="https://alt-5a31a0302d72d.blackboard.com/bbcswebdav/pid-982156-dt-content-rid-14612411_1/courses/FSD.00-43441/Instagram%20copy/index.html?one_hash=0B16917B0E1F538A38F6A96E8C3791F5&f_hash=5E7EFC7CF71B681E021F4D6E4DADA90E" target="_blank">hermanosjota_ba</a></p>
             </div>
 
             <div class="numero_container">
-                <img src="/repositorio/ITBA/Imagenes/social.png" alt="Logo de telefono" class="logo_numero">
+                <img src="Imagenes/social.png" alt="Logo de telefono" class="logo_numero">
                 <p class="numero"><a href="+54 11 4567-8900">+54 11 4567-8900</a></p>
             </div>
 
