Feat: Se finalizo la carta del producto

--- a/assets/html/producto.html
+++ b/assets/html/producto.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Producto</title>
+    <link rel="shortcut icon" href="../../Imagenes/logo.svg" type="image/x-icon">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/navegador.css">
+    <link rel="stylesheet" href="../css/card.css">
 </head>
 <body>
     <header>
@@ -20,14 +22,11 @@
         </nav>
     </header>
     <main>
-        <div class="contenedor_productos">
-            <div id="cabecera">
-                <label for="buscador">Buscador:</label>
-                <input type="text" name="buscador" id="buscador">
+       <div class="contenedor">
+            <div id="card" class="card">
+                
             </div>
-            <div id="productos" class="grilla_productos">
-            </div>
-        </div>
+       </div>
     </main>
     <footer class="footer_container">
             
@@ -43,5 +42,6 @@
 
             <strong class="copy_text">© 2025 Hermanos Jota.</strong>
         </footer>
+        <script src="../js/producto_seleccionado.js"></script>
 </body>
 </html>
