--- a/assets/html/productos.html
+++ b/assets/html/productos.html
@@ -45,6 +45,7 @@
 
             <strong class="copy_text">© 2025 Hermanos Jota.</strong>
         </footer>
+    <script src="../js/listaProductos.js"></script>
     <script src="../js/productos.js"></script>
 </body>
 </html>
