Feat: Se realizo la funcionalidad del carrito

--- a/contacto/Contacto.html
+++ b/contacto/Contacto.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/contacto/style.css">
+    <link rel="stylesheet" href="/assets/css/navegador.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="shortcut icon" href="Imagenes/logo.svg" type="image/x-icon">
     <title>Mueblerias Hermanos Jota</title>
 </head>
@@ -12,9 +14,11 @@
         <nav class="navegacion_container">
             <img src="./img/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
             <ul class="navegacion_links">
-                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/assets/html/productos.html">Productos</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="#" id="carrito"><img src="/Imagenes/logo_carrito.png" alt="carrito de compra" class="nav_carrito"></a></li>
+
             </ul>
         </nav>
     </header>
@@ -58,7 +62,8 @@
             <strong class="copy_text">© 2025 Hermanos Jota.</strong>
         </footer>
 
-        <script src="main.js"></script>
+        <script src="/assets/js/carrito.js"></script>
+        <script src="/contacto/main.js"></script>
     </main>
     
 </body>
