--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/navegador.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="shortcut icon" href="Imagenes/logo.svg" type="image/x-icon">
     <title>Mueblerias Hermanos Jota</title>
 </head>
@@ -14,7 +16,9 @@
             <ul class="navegacion_links">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="/assets/html/productos.html">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="/contacto/Contacto.html">Contacto</a></li>
+                <li><a href="#" id="carrito"><img src="/Imagenes/logo_carrito.png" alt="carrito de compra" class="nav_carrito"></a></li>
+
             </ul>
         </nav>
     </header>
@@ -70,6 +74,7 @@
             <strong class="copy_text">© 2025 Hermanos Jota.</strong>
         </footer>
 
+        <script src="assets/js/carrito.js"></script>
         <script src="CardsData.js"></script>
     </main>
     
