--- a/assets/html/producto.html
+++ b/assets/html/producto.html
@@ -1,47 +1,74 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Producto</title>
-    <link rel="shortcut icon" href="../../Imagenes/logo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/navegador.css">
-    <link rel="stylesheet" href="../css/card.css">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="../../Imagenes/logo.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/navegador.css" />
+    <link rel="stylesheet" href="../css/card.css" />
+  </head>
+  <body>
     <header>
-        <nav class="navegacion_container">
-            <img src="../../Imagenes/logo.svg" alt="Logo Hermanos Jota" class="imagen_logo">
-            <ul class="navegacion_links">
-                <li><a href="/index.html">Inicio</a></li>
-                <li><a href="/assets/html/productos.html">Productos</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Carrito</a></li>
-            </ul>
-        </nav>
+      <nav class="navegacion_container">
+        <img
+          src="../../Imagenes/logo.svg"
+          alt="Logo Hermanos Jota"
+          class="imagen_logo"
+        />
+        <ul class="navegacion_links">
+          <li><a href="/index.html">Inicio</a></li>
+          <li><a href="/assets/html/productos.html">Productos</a></li>
+          <li><a href="/contacto/Contacto.html">Contacto</a></li>
+          <li>
+            <a href="#" id="carrito"
+              ><img
+                src="/Imagenes/logo_carrito.png"
+                alt="carrito de compra"
+                class="nav_carrito"
+            /></a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-       <div class="contenedor">
-            <div id="card" class="card">
-                
-            </div>
-       </div>
+      <div class="contenedor">
+        <div id="card" class="card"></div>
+      </div>
     </main>
     <footer class="footer_container">
-            
-            <div class="instagram_container">
-                <img src="../../Imagenes/instagram.png" alt="Logo de instagram" class="logo_instagram">
-                <p class="instagram"><a href="https://alt-5a31a0302d72d.blackboard.com/bbcswebdav/pid-982156-dt-content-rid-14612411_1/courses/FSD.00-43441/Instagram%20copy/index.html?one_hash=0B16917B0E1F538A38F6A96E8C3791F5&f_hash=5E7EFC7CF71B681E021F4D6E4DADA90E" target="_blank">hermanosjota_ba</a></p>
-            </div>
+      <div class="instagram_container">
+        <img
+          src="../../Imagenes/instagram.png"
+          alt="Logo de instagram"
+          class="logo_instagram"
+        />
+        <p class="instagram">
+          <a
+            href="https://alt-5a31a0302d72d.blackboard.com/bbcswebdav/pid-982156-dt-content-rid-14612411_1/courses/FSD.00-43441/Instagram%20copy/index.html?one_hash=0B16917B0E1F538A38F6A96E8C3791F5&f_hash=5E7EFC7CF71B681E021F4D6E4DADA90E"
+            target="_blank"
+            >hermanosjota_ba</a
+          >
+        </p>
+      </div>
 
-            <div class="numero_container">
-                <img src="../../Imagenes/social.png" alt="Logo de telefono" class="logo_numero">
-                <p class="numero"><a href="+54 11 4567-8900">+54 11 4567-8900</a></p>
-            </div>
+      <div class="numero_container">
+        <img
+          src="../../Imagenes/social.png"
+          alt="Logo de telefono"
+          class="logo_numero"
+        />
+        <p class="numero"><a href="+54 11 4567-8900">+54 11 4567-8900</a></p>
+      </div>
 
-            <strong class="copy_text">© 2025 Hermanos Jota.</strong>
-        </footer>
-        <script src="../js/producto_seleccionado.js"></script>
-</body>
+      <strong class="copy_text">© 2025 Hermanos Jota.</strong>
+    </footer>
+    <script src="../js/carrito.js"></script>
+    <script src="../js/producto_seleccionado.js"></script>
+  </body>
 </html>
