Feat: Simular el envio del contacto

--- a/contacto/Contacto.html
+++ b/contacto/Contacto.html
@@ -42,7 +42,8 @@
                     <br>
                     <textarea id="mensajeUsuario" name="mensaje" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="boton_formulario">Enviar Mensaje</button>
+                <p id="error" class="error"></p>
+                <button type="submit" class="boton_formulario" id="boton_formulario">Enviar Mensaje</button>
             </form>
         </section>
 
